# virus-buster-rust

./: Cargo.toml  readme.md
src/: injection.rs  lib.rs  main.rs  virus.rs
web/: index.html
