[package]
name = "virus-buster-rust"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = 's'

[dependencies]
bevy_kira_audio = {version = "0.5.0", default-features = false, features = ["ogg"] }
wasm-bindgen = "0.2"
rand = "0.8"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = "0.5.0"

# Dependencies for WASM only - not working at the moment
[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5.0", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "png" ]}
bevy_webgl2 = "0.5.0"
getrandom = { version = "0.2", features = ["js"] }
